[project]
name = "comfyui-rabbitmq-publisher"
description = "ComfyUI custom_node that publish output image to rabbit_mq"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy==2.1.3", "pika==1.3.2", "pillow==11.0.0"]

[project.urls]
Repository = "https://github.com/Poseidon-fan/ComfyUI-RabbitMQ-Publisher"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-RabbitMQ-Publisher"
Icon = ""
